k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cibus-api
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.localdev.me
      secretName: cibus-api-tls
  rules:
    - host: api.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cibus-api
                port:
                  number: 80
